Fix broken css

--- a/genesis_block/genesis_block.css
+++ b/genesis_block/genesis_block.css
@@ -66,8 +66,6 @@ body {
 
 .cell {
   padding: 10px 0px 10px 0px;
-  width: 
-  /* width: 90vmin; */
 }
 
 .status {
